# gh-pr-release

./: README.md  go.mod  go.sum  main.go  pyproject.toml
gh_pr_release/: cli.py  gh_pr_release.py
tests/: test_gh_pr_release.py
