[tool.poetry]
name = "gh-pr-release"
version = "0.1.1"
description = "A command line tool which creates a release pull request"
readme = "README.md"
authors = ["aita <792803+aita@users.noreply.github.com>"]
homepage = "https://github.com/aita/gh-pr-release"
repository = "https://github.com/aita/gh-pr-release"
keywords = ["git", "github"]
classifiers = [
        'License :: OSI Approved :: Apache Software License',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.7'
]

[tool.poetry.dependencies]
python = "^3.7"
gitpython = "^2.1"
pygithub = "^1.43"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
black = "==19.3b0"
mypy = "^0.720.0"

[tool.poetry.scripts]
gh-pr-release = 'gh_pr_release.cli:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
